# transformer-from-scratch

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/transformer_from_scratch/: __init__.py  __main__.py  attention.py  data.py  embeddings.py  inference.py  layers.py  model.py  training.py  translation.py
