[project]
name = "transformer-from-scratch"
version = "0.1.0"
description = "A modular reimplementation of the Annotated Transformer."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "torch>=2.10.0",
]

[project.scripts]
transformer-from-scratch = "transformer_from_scratch.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transformer_from_scratch"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
